@@ -1,5 +1,12 @@
 2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	bug #21432: Incorrect timer interrupt handler names for ATtiny45
+	* include/avr/iotnx5.h: Add TIMER0..._vect and TIMER1..._vect
+	names in addition to the TIM0... and TIM1... names to match
+	the recently changed datasheet.
+
+2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	bug #21204: iotnx61.h PRR bits incorrect
 	* include/avr/iotnx61.h: Use correct bit numbers for
 	PRTIM0/PRTIM1.
